# invenio-previewer-mirador

./: .editorconfig  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.rst  babel.ini  run-tests.sh  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml  tests.yml
.tx/: config
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
invenio_previewer_mirador/: __init__.py  config.py  ext.py  previewer.py  views.py  webpack.py
invenio_previewer_mirador/assets/js/: MiradorPreviewer.js  customPreviewers.js  previewer_config.js
invenio_previewer_mirador/templates/invenio_previewer_mirador/: base.html  index.html  preview.html
tests/: conftest.py  test_invenio_previewer_mirador.py
